<resources>

    <!-- networking -->
    <string name="hostname">192.168.10.183</string>
    <string name="port">1443</string>
    <string name="protocol">https</string>

    <!-- Titles -->
    <string name="app_name">1Gram</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="link_register">Register</string>
    <string name="gallery_loading">Loading gallery…</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>

    <!-- hints -->
    <string name="hint_username">e-mail address</string>
    <string name="hint_password">password</string>
    <string name="hint_password_repeat">password (again)</string>
    <string name="search_latest">Search Latest</string>

    <!-- Misc text -->
    <string name="camera">Camera</string>
    <string name="file">File</string>
    <string name="about_title">About</string>
    <string name="about_text">1Gram image sharing service, less addictive social media for your sanity. \n\n~RD</string>
    <string name="upload_description">Add #tags here.</string>
    <string name="upload_save">Save to Gallery</string>
    <string name="filter_spinner">Filters</string>
    <string name="upload_help_title">Upload some pictures!</string>
    <string name="upload_help_camera">Use the camera to get a fresh picture</string>
    <string name="upload_help_file">Upload an existing from your gallery</string>
    <string name="upload_license">Image License</string>
    <string name="upload_disclaimer">By uploading you agree.</string>
    <string name="author">Robin Duda, 2019. 1Gram Author.</string>
    <string name="gallery_help_title">The gallery is empty!</string>
    <string name="gallery_help_search">Add someone else\'s picture</string>
    <string name="gallery_help_upload">Add your own pictures</string>
    <string name="search_help">Start typing for suggestions.</string>
    <string name="setting_gallerymode">Gallery Mode</string>
    <string name="search_loading">Searching…</string>
    <string name="added_to_gallery">Added to gallery.</string>
    <string name="network_uploaded">Uploaded</string>
    <string name="network_downloaded">Downloaded</string>
    <string name="network_ping">Ping</string>
    <string name="reset_stats">RESET</string>
    <string name="gallery_thumbnails">Gallery Thumbnails</string>


    <!-- Error Messages -->
    <string name="registration_failure">Failed to register new account.</string>
    <string name="registration_passwordmismatch">Entered passwords does not match.</string>
    <string name="registration_incomplete">Your data was not accepted.</string>
    <string name="connection_error">Error connecting to server.</string>
    <string name="application_error">Application error occurred.</string>
    <string name="unauthorized">Account name or password is incorrect.</string>
    <string name="registration_exists">Account already exists.</string>
    <string name="email_registration_mail_failed">Failed to send registration email.</string>
    <string name="camera_failure">Failed to open the camera.</string>
    <string name="file_failure">Error writing to file.</string>
    <string name="token_expiry">Your login token has expired.</string>

    <!-- Menu/Navigation -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_add">Upload</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to data storage, does not need translation. -->
    <string name="fragment_login">login</string>
    <string name="fragment_registration">registration</string>
    <string name="fragment_gallery">gallery</string>
    <string name="fragment_upload">upload</string>
    <string name="fragment_search">search</string>

    <string name="shared_username">preference_username</string>
    <string name="shared_preferences">preference_shared</string>
    <string name="shared_token">preference_token</string>
    <string name="account_unverified">Account must be verified to upload images.\n\n A registration link has been sent to your e-mail address.</string>
    <string name="report_unverified">Account must be verified to report pictures.</string>
    <string name="image_license">License</string>
    <string name="image_license_text">All data contained within this application is subject to use for any purpose. 1Gram and all affiliated actors have no responsibilites as of the content contained. The user of this application is responsible for all data uploaded by the application.</string>
    <string name="action_refresh">Refresh</string>
    <string name="loading_failed">Loading Failed</string>
    <string name="report">Report picture</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="action_reset">Reset</string>
    <string name="warning">Warning</string>
    <string name="reset_stats_dialog">Clear all saved statistics?</string>
    <string name="registration_credential_weak">
        Please verify the following\n
        \t- The provided email address must be valid.\n
        \t- The username is at least 5 characters.\n
        \t- The password is at least 8 characters.
    </string>
    <string name="preference_thumbnails">preference_thumbnails</string>
    <string name="gallery_remove_image">Remove image from gallery?</string>
    <string name="remove">Remove</string>
    <string name="fragment_fullscreen">fragment_fullscreen</string>
    <string name="save">Save</string>
    <string name="save_to_phone">Save image to phone?</string>

</resources>
