<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add"
        android:showAsAction="ifRoom"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:showAsAction="never"/>

</menu>